[package]
name = "superdev-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
solana-program = "1.18.12"
bs58 = "0.5.1"
base64 = "0.22.1"
ed25519-dalek = "1.0.1"
rand = "0.7.3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
